# debtlens

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vitest.config.ts
src/: App.smoke.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/analysis/: churn.rs  complexity.rs  coupling.rs  coverage.rs  knowledge.rs  mod.rs  smells.rs  staleness.rs
src-tauri/src/commands/: ast.rs  db.rs  git.rs  mod.rs  scoring.rs  settings.rs  watcher.rs
src-tauri/src/models/: budget.rs  coupling.rs  file_score.rs  mod.rs  register.rs  snapshot.rs  workspace.rs
src-tauri/tests/: ipc_contracts.rs
src/components/budget/: BudgetCard.tsx  DebtBudget.tsx
src/components/heatmap/: CouplingsGraph.tsx  DebtHeatmap.tsx  FilterToolbar.tsx  HeatmapTooltip.tsx  Watchlist.tsx
src/components/layout/: LeftPanel.tsx  MainContent.smoke.test.tsx  MainContent.tsx  StatusBar.tsx  TitleBar.tsx
src/components/onboarding/: AnalysisProgress.tsx  EmptyState.tsx  FileWatcher.tsx
src/components/priority/: FileDebtCard.tsx  FixThisFirst.tsx  ROIEstimator.tsx  ScoreBreakdown.tsx  ScoreRing.tsx
src/components/register/: DebtRegister.tsx  DebtRegisterItem.tsx  RegisterForm.tsx
src/components/settings/: Settings.tsx  WeightSliders.tsx
src/components/shared/: DebtBadge.tsx  EmptyState.tsx
src/lib/: formatters.ts  scoring.ts  tauri.ts
src/store/: debtStore.ts  settingsStore.ts  workspaceStore.ts
src/styles/: globals.css
src/test/: setup.ts
(+12 files in other folders)
